# xZTL

./: .gitmodules  CMakeLists.txt  Makefile  README.md  README.rst  xztl.mk
appznd/: CMakeLists.txt
appznd/include/: znd-media.h
appznd/src/: znd-media.c  znd-zmd.c
appzone/: .zr_media.c.swp  CMakeLists.txt
appzone/include/: zn-media.h
appzone/src/: zn-media.c
cmake/: bundle_ztl.cmake
env/: env_zns.cc  env_zns.h  env_zns_io.cc
include/: lztl.h  xapp-ftl.h  xapp-media.h  xapp-mempool.h  xapp-ztl.h  xapp.h  xztl-media.h  xztl-mempool.h  xztl-ztl.h  xztl.h  ztl-media.h  ztl.h  ztl_metadata.h
lztl/: CMakeLists.txt
lztl/include/: lztl.h  ztl-media.h
lztl/src/: ztl-map.c  ztl-media.c  ztl-mpe.c  ztl-pro-grp.c  ztl-pro.c  ztl-wca.c  ztl-zmd.c
scripts/: CMakeLists.txt  build-lib.mri  merge_libs.sh
src/: xapp-core.c  xapp-ctx.c  xapp-groups.c  xapp-mempool.c  xapp-prometheus.c  xapp-stats.c  xapp-ztl.c  xztl-core.c  xztl-ctx.c  xztl-groups.c  xztl-mempool.c  xztl-prometheus.c  xztl-stats.c  ztl-io.c  ztl-map.c  ztl-media.c  ztl-mgmt-cmd.c  ztl-mpe.c  ztl-pro-grp.c  ztl-pro.c  ztl-thd.c  ztl-wca.c  ztl-zmd.c  ztl.c  ztl_metadata.c
targets/: CMakeLists.txt  zrocks-target.c
targets/include/: libzrocks.h
tests/: CMakeLists.txt  README.md  test-append-mthread.c  test-media-layer.c  test-mempool.c  test-zn-media.c  test-znd-media.c  test-zrocks.c  test-ztl.c
tests/src/: test-append-mthread.c  test-media-layer.c  test-mempool.c  test-znd-media.c  test-zrocks-metadata.c  test-zrocks-rw.c  test-zrocks.c  test-ztl.c
xapp/: CMakeLists.txt  README.md
xapp/cmake/: bundle_xapp.cmake
xapp/include/: xapp-media.h  xapp-mempool.h  xapp-ztl.h  xapp.h
xapp/src/: xapp-core.c  xapp-ctx.c  xapp-groups.c  xapp-mempool.c  xapp-prometheus.c  xapp-stats.c  xapp-ztl.c
xztl/: .gitmodules  Makefile  README.md  log  xztl.mk
xztl/include/: xztl-media.h  xztl-mods.h  xztl-pro.h  xztl-stats.h  xztl.h
xztl/src/: xztl-core.c  xztl-ctx.c  xztl-groups.c  xztl-mempool.c  xztl-prometheus.c  xztl-stats.c  ztl-io.c  ztl-map.c  ztl-media.c  ztl-metadata.c  ztl-mgmt-cmd.c  ztl-mpe.c  ztl-pro-grp.c  ztl-pro.c  ztl-zmd.c
xztl/tests/: README.md
xztl/tests/src/: test-append-mthread.c  test-media-layer.c  test-mempool.c  test-znd-media.c  test-zrocks-metadata.c  test-zrocks-rw.c  test-ztl.c
xztl/xztl/: CMakeLists.txt
xztl/xztl/include/: xztl-metadata.h  xztl-mods.h  xztl-stats.h
xztl/xztl/src/: ztl.c
xztl/xztl/zrocks/include/: libzrocks.h
xztl/zrocks/: README.md
xztl/zrocks/cmake/: bundle_zrocks.cmake
xztl/zrocks/include/: libzrocks.h
xztl/zrocks/src/: zrocks.c
zrocks/: CMakeLists.txt
zrocks/include/: libzrocks.h
zrocks/src/: zrocks.c
ztl/: CMakeLists.txt  README.md
ztl-tgt-zrocks/: CMakeLists.txt  README.md
ztl-tgt-zrocks/cmake/: bundle_zrocks.cmake
ztl-tgt-zrocks/include/: libzrocks.h
ztl-tgt-zrocks/src/: zrocks.c
ztl/cmake/: bundle_ztl.cmake
ztl/include/: lztl.h  ztl-media.h
ztl/src/: ztl-media.c  ztl-pro-grp.c  ztl-pro.c  ztl-wca.c  ztl-zmd.c
